# Writ

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDBOOK.md  Makefile  NOTICE  PROMOTIONAL-BRIEF.md  README.md  SCALE_BENCHMARK_RESULTS.md  SKILL.md  out-of-the-box-rules.md  pyproject.toml  writ-absorbs-superpowers-plan.md  writ.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: auto-approve-gate.sh  validate-design-doc.sh  validate-test-file.sh  writ-memory-policy-guard.sh  writ-postcompact.sh  writ-posttool-rag.sh  writ-pre-write-dispatch.sh  writ-pressure-audit.sh  writ-pretool-rag.sh  writ-quality-judge.sh  writ-rag-inject.sh  writ-sdd-review-order.sh  writ-subagent-start.sh  writ-subagent-stop.sh  writ-verify-before-claim.sh  writ-worktree-safety.sh
benchmarks/: bench_targets.py  methodology_bench.py  run_benchmarks.py  scale_benchmark.py
bible/: .export_timestamp
docs/: SUBMISSION.md  install-writ.md  mandatory-rule-audit.md  phase-0-report.md  phase-0-schema-proposal.md  phase-2-self-review-decision.md  phase-6-plan.md  plugin-marketplace.md  plugin-validation.md
extraction/: 01-architecture-and-data-flow.md  02-graph-and-storage.md  03-retrieval-pipeline.md  04-cli-commands.md  05-http-api.md  06-hooks-and-claude-code-integration.md  07-rule-schema-and-validation.md  08-testing-and-benchmarks.md  09-configuration-and-deployment.md  10-compression-and-abstractions.md  11-evolution-and-authority.md  12-session-and-agentic-retrieval.md
hooks/: hooks.json
rules/: writ-orchestrator.md  writ-workflow.md
scripts/: bootstrap-plugin.sh  ensure-server.sh  export_subagent_roles.py  friction-log-delta.py  ingest_subagent_roles.py  install-user-commands.sh  migrate.py  patch-global-config.sh  patch-permissions.sh  populate_mechanical_paths.py  profile_hotpath.py  seed_phase_2b_solid_arch.py  seed_phase_4_scale_api_docs.py  stop-server.sh
templates/: CLAUDE.md  settings.README.md  settings.json
tests/: conftest.py  test_authoring.py  test_compaction_detection.py  test_compaction_hooks.py  test_compression.py  test_config_integration.py  test_context_watcher_block.py  test_context_watcher_compute.py  test_context_watcher_debounce.py  test_context_watcher_messages.py  test_cwd_changed.py  test_embeddings.py  test_enforce_violations.py  test_exit_code_audit.py  test_exit_plan_phase_reset.py  test_export.py  test_failed_write_tracking.py  test_graph_proximity.py  test_harness_installer.py  test_hook_perf_floors.py  test_hook_stderr_logging.py  test_import_markdown_unified.py  test_infrastructure.py  test_ingest.py  test_instructions_loaded.py  test_integrity.py  test_methodology_companion_orchestrator.py  test_methodology_migration.py  test_methodology_retrieval.py  test_multi_node_ingest.py  test_orchestrator_mode.py  test_phase2_gate_policy.py  test_phase2_hooks.py  test_phase3b_approval_rewrap.py  test_phase3b_export_subagent_roles.py  test_phase4_analyze_friction.py  test_phase4_friction_delta.py  test_phase4b_memory_guard_robustness.py  test_phase4b_memory_policy_guard.py  test_phase4c_postcompact_directive.py  (+29 more)
writ/: cli.py  dashboard.py  export.py  gate.py  server.py
(+248 files in other folders)
