[project]
name = "writ"
version = "0.1.0"
description = "Hybrid RAG knowledge retrieval service for AI coding rule enforcement"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Lucio Saldivar" },
]
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.32,<1",
    "neo4j>=5.0,<6",
    "tantivy>=0.22,<1",
    "sentence-transformers>=3.3,<4",
    "hnswlib>=0.8,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.9,<3",
    "typer>=0.13,<1",
    "rich>=13,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-benchmark>=4,<5",
    "pytest-asyncio>=0.23,<1",
    "mypy>=1.11,<2",
    "ruff>=0.6,<1",
]
benchmark = [
    "pytest>=8,<9",
    "pytest-benchmark>=4,<5",
    "memory-profiler>=0.61,<1",
]

[project.scripts]
writ = "writ.cli:app"

[tool.setuptools.packages.find]
include = ["writ*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
