[project]
name = "claude-writ"
version = "2.0.0"
description = "Hybrid RAG rule retrieval and session-aware workflow enforcement for Claude Code: a five-stage hybrid pipeline (BM25 + ANN + graph + RRF) over a Neo4j knowledge graph, wired into Claude Code via 30 hook scripts and a state machine."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Lucio Saldivar" },
]
keywords = [
    "claude-code",
    "rag",
    "rules",
    "enforcement",
    "neo4j",
    "fastapi",
    "hooks",
    "workflow",
    "code-quality",
    "ai-tooling",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.32,<1",
    "neo4j>=5.0,<6",
    "tantivy>=0.22,<1",
    "sentence-transformers>=3.3,<4",
    "hnswlib>=0.8,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.9,<3",
    "typer>=0.13,<1",
    "rich>=13,<14",
]

[project.urls]
Homepage = "https://github.com/infinri/Writ"
Repository = "https://github.com/infinri/Writ"
Issues = "https://github.com/infinri/Writ/issues"
Changelog = "https://github.com/infinri/Writ/blob/main/CHANGELOG.md"
Documentation = "https://github.com/infinri/Writ#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-benchmark>=4,<5",
    "pytest-asyncio>=0.23,<1",
    "mypy>=1.11,<2",
    "ruff>=0.6,<1",
]
benchmark = [
    "pytest>=8,<9",
    "pytest-benchmark>=4,<5",
    "memory-profiler>=0.61,<1",
]

[project.scripts]
writ = "writ.cli:app"

[tool.setuptools.packages.find]
include = ["writ*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
